Update TODO list, enhance project settings, add pagination classes, and configure production settings

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "sqlalchemy>=2.0.40",
     "django-filter==25.1",
     "django-import-export==4.3.7",
+    "boto3==1.38.21",
 ]
 
 [dependency-groups]
