--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "django-filter==25.1",
     "django-import-export==4.3.7",
     "boto3==1.38.21",
+    {{ '"firebase-admin==6.8.0",' if cookiecutter.use_firebase == "yes" else "" }}
 ]
 
 [dependency-groups]
