--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "sqlalchemy>=2.0.40",
     "django-filter==25.1",
     "django-import-export==4.3.7",
+    "coverage==7.8.1",
     {%- if cookiecutter.use_aws == "yes" %}
     "django-storages==1.14.6",
     "boto3==1.38.21",
@@ -34,6 +35,7 @@ dependencies = [
 dev = [
     "mypy>=1.15.0",
     "ruff>=0.11.9",
+    "codespell==2.4.1",
 ]
 
 [tool.ruff]
